--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,55 +38,6 @@
     <![endif]-->
   </head>
   <body>
-<!--
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%= link_to "Workspace", root_path, class: "navbar-brand" %>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Informações <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <%= link_to "Status", info_path %>
-                    </li>
-                    <li>
-                        <%= link_to "Grade", grade_path %>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Equipamento <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <%= link_to "Lista", equipamentos_path %>
-                    </li>
-                    <li>
-                        <%= link_to "Cadastrar", new_equipamento_path  %>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sala <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <%= link_to "Listar", salas_path  %>
-                    </li>
-                    <li>
-                        <%= link_to "Cadastrar", new_sala_path  %>
-                    </li>
-                </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
--->
     <div id="wrapper">
       <!-- Navigation -->
       <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -125,17 +76,6 @@
           <div class="navbar-default sidebar" role="navigation">
               <div class="sidebar-nav navbar-collapse">
                   <ul class="nav" id="side-menu">
-                      <li class="sidebar-search">
-                          <div class="input-group custom-search-form">
-                              <input type="text" class="form-control" placeholder="Search...">
-                              <span class="input-group-btn">
-                              <button class="btn btn-default" type="button">
-                                  <i class="fa fa-search"></i>
-                              </button>
-                          </span>
-                          </div>
-                          <!-- /input-group -->
-                      </li>
                       <li>
                           <a href="/"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                       </li>
@@ -194,18 +134,12 @@
               </p>
               <div class="row">
                 <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-                  <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                  <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                  <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                  <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                  <a href="https://github.com/denilsonrc/samurai_v2"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 hidden-xs text-right">
-                  <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                  <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                  <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                  <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                  <a href="https://github.com/denilsonrc/samurai_v2"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
                 </div>
               </div>
             </div>
