--- a/app/views/equipamentos/_form.html.erb
+++ b/app/views/equipamentos/_form.html.erb
@@ -1,30 +1,29 @@
 <div class="col-lg-11">
+  <%= form_for @equipamento, :html => { :class => "form-horizontal equipamento" } do |f| %>
+  
+  <% if @equipamento.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@equipamento.errors.count, "error") %> prohibited this equipamento from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @equipamento.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+
   <div class="panel panel-default">
     <div class="panel-heading">
-      <i class="fa fa-bar-chart-o fa-fw"></i> Area Chart Example
+      <i class="fa fa-desktop fa-fw"></i> Formulario de equipamentos
     </div>
     <!-- /.panel-heading -->
     <div class="panel-body">
       <div class="container">
-
-        <%= form_for @equipamento, :html => { :class => "form-horizontal equipamento" } do |f| %>
-          
-          <% if @equipamento.errors.any? %>
-            <div id="error_expl" class="panel panel-danger">
-              <div class="panel-heading">
-                <h3 class="panel-title"><%= pluralize(@equipamento.errors.count, "error") %> prohibited this equipamento from being saved:</h3>
-              </div>
-              <div class="panel-body">
-                <ul>
-                <% @equipamento.errors.full_messages.each do |msg| %>
-                  <li><%= msg %></li>
-                <% end %>
-                </ul>
-              </div>
-            </div>
-          <% end %>
-          
-          <div class="form-group">
+        <div class="form-group">
             <%= f.label :nome, :class => 'control-label' %>
             <%= f.text_field :nome, :class => 'form-control' %>
           </div>
@@ -37,12 +36,21 @@
             <%= f.text_field :protocolo, :class => 'form-control' %>
           </div>
           <div class="form-group">
+            <%= link_to "Adicionar protocolo", new_tipo_path, :class => 'btn btn-success' %>
+          </div>
+          <div class="form-group">
             <%= f.label :sala_id, :class => 'control-label' %>
             <%= select(:equipamento, :sala_id, Sala.all.collect {|s| [ s.nome, s.id ] }, {prompt: 'Selecione a sala'}, :class=>'form-control') %>
           </div>
           <div class="form-group">
+            <%= link_to "Adicionar sala", new_sala_path, :class => 'btn btn-success' %>
+          </div>
+          <div class="form-group">
             <%= f.label :tipo_id, :class => 'control-label' %>
             <%= select(:equipamento, :tipo_id, Tipo.all.collect {|t| [ t.nome, t.id ] }, {prompt: 'Selecione o tipo'}, :class=>'form-control') %>
+          </div>
+          <div class="form-group">
+            <%= link_to "Adicionar tipo", new_tipo_path, :class => 'btn btn-success' %>
           </div>
           <div class="form-group">
             <%= f.label :descricao, :class => 'control-label' %>
@@ -52,8 +60,8 @@
             <%= f.submit nil, :class => 'btn btn-primary' %>
             <%= link_to "Cancelar", equipamentos_path, :class => 'btn btn-default' %>
           </div>
-        <% end %>
       </div>
     </div>
   </div>
+  <% end %>
 </div>
