--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,11 +134,13 @@
               </p>
               <div class="row">
                 <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
+                  <a href="https://github.com/denilsonrc/samurai_v2" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>
                   <a href="https://github.com/denilsonrc/samurai_v2"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 hidden-xs text-right">
+                  <a href="https://github.com/denilsonrc/samurai_v2" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>
                   <a href="https://github.com/denilsonrc/samurai_v2"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
                 </div>
               </div>
