--- a/app/views/tipo/new.html.erb
+++ b/app/views/tipo/new.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Equipamento -%>
+<%- model_class = Tipo -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'Novo %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
