Atualizado o model da aplicação

--- a/app/views/equipamentos/_form.html.erb
+++ b/app/views/equipamentos/_form.html.erb
@@ -23,40 +23,42 @@
     <!-- /.panel-heading -->
     <div class="panel-body">
       <div class="container">
-        <div class="form-group">
+        <div class="form-group col-sm-11 col-lg-10">
             <%= f.label :nome, :class => 'control-label' %>
             <%= f.text_field :nome, :class => 'form-control' %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-sm-11 col-lg-10">
             <%= f.label :ip, :class => 'control-label' %>
             <%= f.text_field :ip, :class => 'form-control' %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-sm-11 col-lg-10">
             <%= f.label :protocolo, :class => 'control-label' %>
-            <%= f.text_field :protocolo, :class => 'form-control' %>
+            <%#= f.text_field :protocolo, :class => 'form-control' %>
+            <%= select(:equipamento, :protocolo_id, Protocolo.all.collect {|p| [ p.nome, p.id ] }, {prompt: 'Selecione o protocolo'}, :class=>'form-control') %>
           </div>
-          <div class="form-group">
-            <%= link_to "Adicionar protocolo", new_tipo_path, :class => 'btn btn-success' %>
+          <div class="form-group col-sm-11 col-lg-10">
+            <%= f.label :no, :class => 'control-label' %>
+            <%= f.text_field :no, :class => 'form-control' %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-lg-10">
             <%= f.label :sala_id, :class => 'control-label' %>
             <%= select(:equipamento, :sala_id, Sala.all.collect {|s| [ s.nome, s.id ] }, {prompt: 'Selecione a sala'}, :class=>'form-control') %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-lg-10">
             <%= link_to "Adicionar sala", new_sala_path, :class => 'btn btn-success' %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-lg-10">
             <%= f.label :tipo_id, :class => 'control-label' %>
             <%= select(:equipamento, :tipo_id, Tipo.all.collect {|t| [ t.nome, t.id ] }, {prompt: 'Selecione o tipo'}, :class=>'form-control') %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-lg-10">
             <%= link_to "Adicionar tipo", new_tipo_path, :class => 'btn btn-success' %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-lg-10">
             <%= f.label :descricao, :class => 'control-label' %>
             <%= f.text_area :descricao, :class => 'form-control' %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-lg-10">
             <%= f.submit nil, :class => 'btn btn-primary' %>
             <%= link_to "Cancelar", equipamentos_path, :class => 'btn btn-default' %>
           </div>
