--- a/app/views/equipamentos/new.html.erb
+++ b/app/views/equipamentos/new.html.erb
@@ -1,5 +1,3 @@
-<%- model_class = Equipamento -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'Novo %{model}'], :model => model_class.model_name.human.titleize %></h1>
-</div>
-<%= render :partial => 'form' %>
+<h1>Novo Equipamento</h1>
+
+<%= render 'form' %>
