--- a/app/views/equipamentos/show.html.erb
+++ b/app/views/equipamentos/show.html.erb
@@ -1,90 +1,24 @@
-<!--
-<%- model_class = Equipamento -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
-</div>
+<p id="notice"><%= notice %></p>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
-  <dd><%= @equipamento.nome %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:protocolo) %>:</strong></dt>
-  <dd><%= @equipamento.protocolo %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ip) %>:</strong></dt>
-  <dd><%= @equipamento.ip %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:sala_id) %>:</strong></dt>
-  <dd><%= @equipamento.sala_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:tipo_id) %>:</strong></dt>
-  <dd><%= @equipamento.tipo_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:descricao) %>:</strong></dt>
-  <dd><%= @equipamento.descricao %></dd>
-</dl>
+<p>
+  <strong>Nome:</strong>
+  <%= @equipamento.nome %>
+</p>
 
+<p>
+  <strong>Ip:</strong>
+  <%= @equipamento.ip %>
+</p>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              equipamentos_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_equipamento_path(@equipamento), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              equipamento_path(@equipamento),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
--->
-<div class="row">
-  <div class="col-lg-12">
-    <h1 class="page-header">Registros do equipamento</h1>
-  </div>
-  <!-- /.col-lg-12 -->
-</div>
-<div class="row">
-  <div class="col-lg-2 col-md-4">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <i class="fa fa-bar-chart-o fa-fw"></i> Dados do equipamento
-      </div>
-      <!-- /.panel-heading -->
-      <div class="panel-body">
-        <div class="row">
-          <div class="container">
-            <dl class="dl-vertical">
-              <dt><strong>Nome: </strong></dt>
-              <dd><%= @equipamento.nome %></dd>
-              <dt><strong>Status: </strong></dt>
-              <dd><%= @equipamento.historico_equipamentos.last.status %></dd>
-              <dt><strong>Tipo: </strong></dt>
-              <dd><%= @equipamento.tipo.nome %></dd>
-            </dl>
-          </div>
-        </div>  
-      </div>
-      <!-- /.panel-body -->
-    </div>
-    <!-- /.panel -->
-  </div>
-  <div class="col-lg-10">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <i class="fa fa-bar-chart-o fa-fw"></i> Grafico de tempo de resposta do dispositivo
-      </div>
-      <!-- /.panel-heading -->
-      <div class="panel-body">
-        <%= area_chart @equipamento.historico_equipamentos.map { |he|  [he.created_at,he.tempo.to_i] }%>  
-      </div>
-      <!-- /.panel-body -->
-    </div>
-    <!-- /.panel -->
-  </div>
-  <div class="col-lg-10">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <i class="fa fa-bar-chart-o fa-fw"></i> Grafico de quantidade do status do dispositivo
-      </div>
-      <!-- /.panel-heading -->
-      <div class="panel-body">
-        <%= pie_chart [["ligado",@equipamento.status_por_numero_de_registro("ligado")],["desligado",@equipamento.status_por_numero_de_registro("desligado")]],xtitle: "Time", ytitle: "Population", min: 900 %>  
-      </div>
-      <!-- /.panel-body -->
-    </div>
-    <!-- /.panel -->
-  </div>
-</div>
+<p>
+  <strong>Status:</strong>
+  <%= @equipamento.status %>
+</p>
+
+<p>
+  <strong>Descricao:</strong>
+  <%= @equipamento.descricao %>
+</p>
+
+<%= link_to 'Edit', edit_equipamento_path(@equipamento) %> |
+<%= link_to 'Back', equipamentos_path %>
