--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,12 +59,12 @@
                       <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                   </a>
                   <ul class="dropdown-menu dropdown-user">
-                      <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                      <li><a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
                       </li>
-                      <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                      <li><a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
                       </li>
                       <li class="divider"></li>
-                      <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                      <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
                       </li>
                   </ul>
                   <!-- /.dropdown-user -->
@@ -135,13 +135,11 @@
               <div class="row">
                 <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
                   <a href="https://github.com/denilsonrc/samurai_v2" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>
-                  <a href="https://github.com/denilsonrc/samurai_v2"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 hidden-xs text-right">
                   <a href="https://github.com/denilsonrc/samurai_v2" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i></a>
-                  <a href="https://github.com/denilsonrc/samurai_v2"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
                 </div>
               </div>
             </div>
