--- a/app/views/tipo/_form.html.erb
+++ b/app/views/tipo/_form.html.erb
@@ -12,7 +12,7 @@
           <% if @tipo.errors.any? %>
             <div id="error_expl" class="panel panel-danger">
               <div class="panel-heading">
-                <h3 class="panel-title"><%= pluralize(@tipo.errors.count, "error") %> prohibited this tipo from being saved:</h3>
+                <h3 class="panel-title"><%= pluralize(@tipo.errors.count, "error") %>, registro não salvo:</h3>
               </div>
               <div class="panel-body">
                 <ul>
