--- a/app/views/equipamentos/show.html.erb
+++ b/app/views/equipamentos/show.html.erb
@@ -1,24 +1,33 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Equipamento -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @equipamento.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @equipamento.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:ip) %>:</strong></dt>
+  <dd><%= @equipamento.ip %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
+  <dd><%= @equipamento.status %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:no) %>:</strong></dt>
+  <dd><%= @equipamento.no %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:descricao) %>:</strong></dt>
+  <dd><%= @equipamento.descricao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:sala_id) %>:</strong></dt>
+  <dd><%= @equipamento.sala_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:tipo_id) %>:</strong></dt>
+  <dd><%= @equipamento.tipo_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:protocolo_id) %>:</strong></dt>
+  <dd><%= @equipamento.protocolo_id %></dd>
+</dl>
 
-<p>
-  <strong>Ip:</strong>
-  <%= @equipamento.ip %>
-</p>
-
-<p>
-  <strong>Status:</strong>
-  <%= @equipamento.status %>
-</p>
-
-<p>
-  <strong>Descricao:</strong>
-  <%= @equipamento.descricao %>
-</p>
-
-<%= link_to 'Edit', edit_equipamento_path(@equipamento) %> |
-<%= link_to 'Back', equipamentos_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              equipamentos_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_equipamento_path(@equipamento), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              equipamento_path(@equipamento),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
