--- a/app/views/protocolos/index.html.erb
+++ b/app/views/protocolos/index.html.erb
@@ -1,27 +1,36 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Protocolos</h1>
-
-<table>
+<%- model_class = Protocolo -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @protocolos.each do |protocolo| %>
       <tr>
+        <td><%= link_to protocolo.id, protocolo_path(protocolo) %></td>
         <td><%= protocolo.nome %></td>
-        <td><%= link_to 'Show', protocolo %></td>
-        <td><%= link_to 'Edit', edit_protocolo_path(protocolo) %></td>
-        <td><%= link_to 'Destroy', protocolo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l protocolo.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_protocolo_path(protocolo), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      protocolo_path(protocolo),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Protocolo', new_protocolo_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_protocolo_path,
+            :class => 'btn btn-primary' %>
