--- a/app/views/protocolos/show.html.erb
+++ b/app/views/protocolos/show.html.erb
@@ -1,9 +1,19 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Protocolo -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @protocolo.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @protocolo.nome %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_protocolo_path(@protocolo) %> |
-<%= link_to 'Back', protocolos_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              protocolos_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_protocolo_path(@protocolo), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              protocolo_path(@protocolo),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
