--- a/app/views/salas/show.html.erb
+++ b/app/views/salas/show.html.erb
@@ -1,19 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Sala -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @sala.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @sala.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:numero) %>:</strong></dt>
+  <dd><%= @sala.numero %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:andar) %>:</strong></dt>
+  <dd><%= @sala.andar %></dd>
+</dl>
 
-<p>
-  <strong>Numero:</strong>
-  <%= @sala.numero %>
-</p>
-
-<p>
-  <strong>Andar:</strong>
-  <%= @sala.andar %>
-</p>
-
-<%= link_to 'Edit', edit_sala_path(@sala) %> |
-<%= link_to 'Back', salas_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              salas_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_sala_path(@sala), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              sala_path(@sala),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
