--- a/app/views/equipamentos/show.html.erb
+++ b/app/views/equipamentos/show.html.erb
@@ -10,8 +10,8 @@
   <dd><%= @equipamento.ip %></dd>
   <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
   <dd><%= @equipamento.status %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:no) %>:</strong></dt>
-  <dd><%= @equipamento.no %></dd>
+  <dt><strong><%#= model_class.human_attribute_name(:no) %> Gateway:</strong></dt>
+  <dd><%= @equipamento.equipamento.ip %></dd>
   <dt><strong><%= model_class.human_attribute_name(:descricao) %>:</strong></dt>
   <dd><%= @equipamento.descricao %></dd>
   <dt><strong><%= model_class.human_attribute_name(:sala_id) %>:</strong></dt>
